Fixed smaller bugs on contact.html; Changed Website design for better readability

--- a/galery/galery.css
+++ b/galery/galery.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #5f5f5f;
-  color: white;
+  background-color: rgb(233,223,211);
+  color: black;
   font-family: "American Typewriter", monospace;
   margin: 0;
   font-weight: bold;
@@ -8,6 +8,24 @@ body{
 
 .insert{
   color:rgb(128, 0, 42);
+}
+
+.button{
+  background-color: rgba(0,0,0,0.5);
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 4px;
+  font-family: "American Typewriter", monospace;
+}
+
+.button:hover{
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  cursor: pointer;
 }
 
 #header{
@@ -35,7 +53,7 @@ body{
 }
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
+  background-color: #ad9b6b;
   overflow: hidden;
 }
 
@@ -51,7 +69,7 @@ body{
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: rgb(233,223,211);
   color: black;
 }
 
